updated readme with install guide and correct make instructions